--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 		</div>
 	</div>
 	<div class="flex flex-col container mx-auto max-w-lg">
-		<h1 class="my-4 text-lg text-grey mx-5 md:mx-1" id="stats-title">Stats for @example</h1>
-		<div class="flex flex-row w-full">
+		<h1 class="my-2 text-lg text-grey-dark mx-5 md:mx-1" id="stats-title">Stats for @example</h1>
+		<span class="mb-2 text-sm text-grey mx-5 md:mx-1">Based on last 10,000 transactions</span>
+		<div class="flex flex-col md:flex-row w-full">
 			<div class="w-full md:w-1/3">
 				<div class="bg-white shadow mx-5 my-5 md:m-1 p-5">
 					<h2 class="text-lg text-grey-dark font-light pb-4">Spent</h1>
