--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Drugwars ROI</title>
 	<link rel="stylesheet" type="text/css" href="css/tailwind.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body class="bg-grey-lightest">
 	<div class="h-12 w-full bg-blue mb-5">
